# glyf-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: compress_benchmark.rs  element_benchmark.rs  expand_benchmark.rs  parser_benchmark.rs
src/: lib.rs
src/checker/: mod.rs
src/config/: mod.rs
src/parser/: attribute.rs  consts.rs  error.rs  html.rs  mod.rs  snippet.rs  types.rs  utils.rs  validate.rs
