[package]
name = "glyf-core"
version = "0.3.0"
edition = "2024"
description = "A fast Emmet inspired HTML and JSX abbreviation parser and expander"
license = "MIT"
repository = "https://github.com/LeoDurillon/glyf-core"
readme = "README.md"
keywords = ["emmet", "html", "parser", "jsx"]
categories = ["text-processing"]
exclude = ["benches/", "tests/"]

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.12.3"


[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "expand_benchmark"
harness = false

[[bench]]
name = "compress_benchmark"
harness = false
